[package]
name = "enjoyer"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

[dependencies]
actix-web= "=4.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-cors = "=0.6.0-beta.1"
awc = "=3.0.0-beta.4"
serde = { version = "1.0.125", features = ["derive"] }
listenfd = "0.3.3"
tera = "1.8.0"
anyhow = "1.0.40"
sqlx = { version = "0.5.2", features = ["runtime-actix-native-tls", "postgres", "macros", "json", "uuid", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.14"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
log = "0.4.14"
fern = "0.6.0"
riven = "1.11.2"